WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41035
Fix uninitialized SubframeLoader::m_containsPlugins
https://bugs.webkit.org/show_bug.cgi?id=41035
Summary
Fix uninitialized SubframeLoader::m_containsPlugins
Kent Tamura
Reported
2010-06-22 20:59:38 PDT
Found by valgrind:
http://build.chromium.org/buildbot/memory/builders/Linux%20Tests%20(valgrind)(2)/builds/6133/steps/memory%20test:%20ui/logs/stdio
Attachments
Patch
(1.08 KB, patch)
2010-06-22 21:01 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-06-22 21:01:21 PDT
Created
attachment 59471
[details]
Patch
Adam Barth
Comment 2
2010-06-22 21:06:29 PDT
Comment on
attachment 59471
[details]
Patch I support initializing memory. :)
Kent Tamura
Comment 3
2010-06-22 21:10:45 PDT
Comment on
attachment 59471
[details]
Patch Clearing flags on attachment: 59471 Committed
r61651
: <
http://trac.webkit.org/changeset/61651
>
Kent Tamura
Comment 4
2010-06-22 21:10:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug