2010-06-22  Kent Tamura  <tkent@chromium.org>

Reviewed by Adam Barth.

        Fix uninitialized SubframeLoader::m_containsPlugins
        https://bugs.webkit.org/show_bug.cgi?id=41035

        * loader/SubframeLoader.cpp:
        (WebCore::SubframeLoader::SubframeLoader):
         Initialize m_containsPlugins with false.

Canonical link: https://commits.webkit.org/52658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61651 268f45cc-cd09-0410-ab3c-d52691b4dbfc